# shell-oaiharvester

./: .project  CHANGELOG.md  Makefile.am  README  README.md  config.example.xml  config.sh  config.xml  configure.ac  harvester.sh  oaiharvester  test.sh
libs/: common.sh  functions.sh  migrations.sh  retrieveConfig.xsl  retrieveData.xsl  retrieveRecord.xsl  retrieveTextRecord.xsl  retrieveXmlRecord.xsl  urlescape.sed
test/: errorpage.xml  identify-missingdatestamp.xml  identify.xml  oaipage.xml  test_command.sh  test_functions.sh  test_migrations.sh  testlib.sh
test/version1-repo/: .oaiharvester  lasttimestamp.txt
